@@ -24,3 +24,6 @@ Perl - Text-CSV-LibCSV by Jiro Nishiguchi
 
 Ruby - SimpleCSV by Ken Date
        http://rubyforge.org/projects/simplecsv/
+
+       Rcsv by Artur Pyrogovskyi
+       https://github.com/fiksu/rcsv
